# im-v1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/protocomm/: CMakeLists.txt
components/protocomm/proto-c/: constants.pb-c.h  sec0.pb-c.h  sec1.pb-c.h  sec2.pb-c.h  session.pb-c.h
components/protocomm/python/: sec2_pb2.py  session_pb2.py
main/: CMakeLists.txt  defs.h  main.c
main/bme688/: bme688.c  bme688.h
main/bmi270/: bmi270.c  bmi270.h
main/bmm350/: bmm350.c  bmm350.h
main/common/: common.c  common.h
main/schema/: schema.pb-c.c  schema.pb-c.h  schema.proto
